<resources>
    <string name="app_name">WAT Rozkład</string>
    <string name="action_settings">Ustawienia</string>
    <string name="action_day_view">Dzień</string>
    <string name="action_week_view">Rozkład</string>
    <string name="action_subs">Subskrypcje</string>
    <string name="sub_name_hint">Nazwa</string>
    <string name="sub_token_hint">Token</string>
    <string name="clear_button_text">Wyczyść</string>
    <string name="add_sub_button_text">Dodaj</string>
    <string name="day_no_blocks_text">Brak zajęć!</string>
    <string name="add_note_button_text">dodaj</string>
    <string name="note_title_hint">Tytuł notatki</string>
    <string name="note_description_hint_text">Tutaj wpisz treść…</string>
    <string name="delete_sub_button_text">Usuń</string>
    <string name="login_text">Zaloguj</string>
    <string name="action_logout">Wyloguj</string>
    <string name="download_sub_list_text">Pobierz listę subskrypcji</string>
    <string name="your_token_text">Twój token</string>
    <string name="set_button_text">Ustaw</string>
    <string name="semester_text">Semestr</string>
    <string name="group_text">Grupa</string>
    <string name="addSubButtonEditText">Edytuj</string>
    <string name="serializable_subscription_name">sub</string>
    <string name="week_log_fail_fetching_days">Failure fetching days for the given day</string>
    <string name="week_log_success_retrieved_document">Successfully retrieved document:</string>
    <string name="serializable_block_name">block</string>
    <string name="adding_note_toast_text">Dodaję notatkę…</string>
    <string name="Block_log_adding_block_doc">dodawanie do block:</string>
    <string name="listen_failed_text">Listen failed.</string>
    <string name="day_log_adding_to_day_block_text">dodawanie do Day block:</string>
    <string-array name="months">
        <item>@string/month1</item>
        <item>@string/month2</item>
        <item>@string/month3</item>
        <item>@string/month4</item>
        <item>@string/month5</item>
        <item>@string/month6</item>
        <item>@string/month7</item>
        <item>@string/month8</item>
        <item>@string/month9</item>
        <item>@string/month10</item>
        <item>@string/month11</item>
        <item>@string/month12</item>
    </string-array>
    <string-array name="daysOfTheWeek">
        <item>@string/dayOfTheWeek1</item>
        <item>@string/dayOfTheWeek2</item>
        <item>@string/dayOfTheWeek3</item>
        <item>@string/dayOfTheWeek4</item>
        <item>@string/dayOfTheWeek5</item>
        <item>@string/dayOfTheWeek6</item>
        <item>@string/dayOfTheWeek7</item>
    </string-array>
    <string-array name="daysOfTheWeekShort">
        <item>@string/dayOfTheWeekShort1</item>
        <item>@string/dayOfTheWeekShort2</item>
        <item>@string/dayOfTheWeekShort3</item>
        <item>@string/dayOfTheWeekShort4</item>
        <item>@string/dayOfTheWeekShort5</item>
        <item>@string/dayOfTheWeekShort6</item>
        <item>@string/dayOfTheWeekShort7</item>
    </string-array>
    <string-array name="blockTimes">
        <item>8:00</item>
        <item>9:50</item>
        <item>11:40</item>
        <item>13:30</item>
        <item>15:45</item>
        <item>17:35</item>
        <item>19:25</item>
    </string-array>
    <string name="dayOfTheWeek1">Niedziela</string>
    <string name="dayOfTheWeek2">Poniedziałek</string>
    <string name="dayOfTheWeek3">Wtorek</string>
    <string name="dayOfTheWeek4">Środa</string>
    <string name="dayOfTheWeek5">Czwartek</string>
    <string name="dayOfTheWeek6">Piątek</string>
    <string name="dayOfTheWeek7">Sobota</string>
    <string name="dayOfTheWeekShort1">Nd</string>
    <string name="dayOfTheWeekShort2">Pon</string>
    <string name="dayOfTheWeekShort3">Wt</string>
    <string name="dayOfTheWeekShort4">Śr</string>
    <string name="dayOfTheWeekShort5">Czw</string>
    <string name="dayOfTheWeekShort6">Pt</string>
    <string name="dayOfTheWeekShort7">Sb</string>
    <string name="month1">Styczeń</string>
    <string name="month2">Luty</string>
    <string name="month3">Marzec</string>
    <string name="month4">Kwiecień</string>
    <string name="month5">Maj</string>
    <string name="month6">Czerwiec</string>
    <string name="month7">Lipiec</string>
    <string name="month8">Sierpień</string>
    <string name="month9">Wrzesień</string>
    <string name="month10">Październik</string>
    <string name="month11">Listopad</string>
    <string name="month12">Grudzień</string>
    <string name="DayActivityLogTAG">DayActivity</string>
    <string name="BlockActivity_log_TAG">BlockActivity</string>
    <string name="subscription_mapper_contains_author">author</string>
    <string name="Settings_log_group_list_fail">Fetching group list fail:</string>
    <string name="Settings_log_failed_fetching_uid">failed fetching uid:</string>
    <string name="SettingsActivity_log_TAG">SettingsActivity</string>
    <string name="collection_semester">semester</string>
    <string name="collection_groups">groups</string>
    <string name="pdf_creator">WAT Rozkład</string>
    <string name="pdf_directory">sdcard/Subscriptions.pdf</string>
    <string name="pdf_title">Lista subskrypcji</string>
    <string name="toast_pdf_generation_success">Dokument wygenerowany pomyślnie!</string>
    <string name="toast_pdf_saving_document_fail">Błąd zapisywania dokumentu</string>
    <string name="toast_pdf_opening_file_fail">Błąd otwierania pliku</string>
    <string name="Week_log_TAG">WeekActivity</string>
    <string name="entity_subscription_title">title</string>
    <string name="toast_add_sub_wrong_name">Źle wprowadzono nazwę!</string>
    <string name="toast_add_sub_wrong_token">Źle wprowadzono token!</string>
    <string name="toast_add_sub_add_success">Pomyślnie dodano subskrypcję!</string>
    <string name="toast_add_sub_delete_success">Pomyślnie usunięto subskrypcję!</string>
    <string name="toast_add_sub_edit_success">Pomyślnie zedytowano subskrypcję!</string>
    <string name="SubAddActivity_log_TAG">SubAddActivity</string>
    <string name="entity_subscription_token">token</string>
    <string name="SubListActivity_log_TAG">SubListActivity</string>
    <string name="collection_user">user</string>
    <string name="collection_sublist">sublist</string>
    <string name="collection_notes">notes</string>
    <string name="entity_note_title">title</string>
    <string name="entity_note_author">author</string>
    <string name="entity_note_description">description</string>
    <string name="document_attribute_noteIndex">noteIndex</string>
    <string name="document_attribute_noteCount">noteCount</string>
    <string name="google_logo_description">Google logo</string>
    <string name="addNoteActivity_log_TAG">AddNoteActivity</string>
    <string name="mainActivity_log_TAG">MainLoginActivity</string>
    <string name="entity_block_month">month</string>
    <string name="entity_block_day">day</string>
    <string name="semester_ranges_start">semesterStart</string>
    <string name="semester_ranges_end">semesterEnd</string>
    <string name="user_self">ty</string>
    <string name="user_info_semester">semester</string>
    <string name="user_info_group">group</string>
    <string name="toast_login_interrupted">Logowanie przerwano</string>
    <string name="toast_login_failed">Błąd logowania</string>
    <string name="default_semester">2018Zima</string>
    <string name="default_group">I6B2S1</string>
    <string name="toast_successful_login">Pomyślnie zalogowano!</string>
</resources>
